[gd_scene load_steps=4 format=3 uid="uid://d3x8mnmy1s3rf"]

[ext_resource type="Script" uid="uid://dp62mf616jijc" path="res://src/scenes/objects/npc/npc.gd" id="1_f6lo0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f6lo0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goc85"]
size = Vector2(28.2069, 27.5)

[node name="NPC" type="Node2D"]
texture_filter = 1
position = Vector2(16, -16)
script = ExtResource("1_f6lo0")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-16, 16)
sprite_frames = SubResource("SpriteFrames_f6lo0")
offset = Vector2(16, -16)

[node name="IntArea" type="Area2D" parent="sprite"]
position = Vector2(16, -16)
collision_layer = 512
collision_mask = 2

[node name="Area" type="CollisionShape2D" parent="sprite/IntArea" groups=["NPC"]]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_goc85")

[connection signal="body_entered" from="sprite/IntArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="sprite/IntArea" to="." method="_on_interaction_area_body_exited"]
